Fixed : Metaboxes overlap Block Editor's edit link popup

--- a/packages/edit-post/src/components/layout/style.scss
+++ b/packages/edit-post/src/components/layout/style.scss
@@ -1,6 +1,7 @@
 .edit-post-layout__metaboxes {
 	flex-shrink: 0;
 	clear: both;
+	z-index: -1;
 }
 
 // Adjust the position of the notices
